--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
   },
   "homepage": "https://github.com/fuchstim/subframe#readme",
   "dependencies": {
-    "forever": "^2.0.0",
-    "express": "^4.17.1",
+    "async-lock": "^1.2.2",
     "eslint": "^6.8.0",
+    "express": "^4.17.1",
+    "forever": "^2.0.0",
+    "hashmap": "^2.4.0",
     "node-datetime": "^2.1.2"
   },
   "devDependencies": {
